# StateMachine_Frame

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.sh  run_test.sh
cmake/: FSMConfig.cmake.in  statemachine.pc.in
config/: fsm_config.json  state_config.json
config/event_generate_config/: power_event.json
config/trans_config/: active_to_paused.json  active_to_standby.json  idle_to_standby.json  off_to_idle.json  on_to_off.json  paused_to_active.json  standby_to_active.json  standby_to_idle.json
src/: CMakeLists.txt  main_test.cpp  state_machine.h
state_machine/: CMakeLists.txt  logger.h  state_event_handler.h  state_machine.h
state_machine/include/: Event.h  common_define.h  event.h  handler_example.h  logger.h  state_event_handler.h  state_machine.h  state_machine_factory.h
state_machine/include/components/: condition_manager.h  config_loader.h  event_handler.h  i_component.h  i_condition_manager.h  i_config_loader.h  i_event_handler.h  i_state_manager.h  i_transition_manager.h  state_manager.h  transition_manager.h
state_machine/src/: state_machine.cpp  state_machine_factory.cpp
state_machine/src/components/: condition_manager.cpp  config_loader.cpp  event_handler.cpp  state_manager.cpp  transition_manager.cpp
test/: CMakeLists.txt
test/comprehensive_test/: comprehensive_test.cpp  state_hierarchy_test.cpp
test/condition_expr_test/: CMakeLists.txt  condition_expr_test.cpp
test/condition_expr_test/config/: state_config.json
test/condition_expr_test/config/event_generate_config/: condition_defs.json
test/condition_expr_test/config/trans_config/: a_to_b.json  b_to_c.json  c_to_d.json  init_to_a.json
test/condition_timeout_test/: CMakeLists.txt  main.cpp
test/condition_timeout_test/config/: state_config.json
test/condition_timeout_test/config/event_generate_config/: increase_pressure.json  start_heating.json
test/condition_timeout_test/config/trans_config/: heating2pressurizing.json  idle2heating.json  pressurizing2ready.json
test/conditions_event/: CMakeLists.txt  condition_event_test.cpp
test/conditions_event/config/: condition_event_test.json  state_config.json
test/conditions_event/config/event_generate_config/: start_work.json  system_error.json
test/conditions_event/config/trans_config/: error2init.json  init2working.json  working2error.json  working2init.json
test/main_test/: main_test.cpp
test/multi_event_test/: CMakeLists.txt  multi_event_test.cpp
test/multi_range_conditions/: CMakeLists.txt  test_multi_range_conditions.cpp
test/pre_transition_test/: CMakeLists.txt  main.cpp
test/pre_transition_test/config/: state_config.json
test/pre_transition_test/config/trans_config/: heating2ready.json  idle2heating.json  ready2idle.json
test/state_timeout/: CMakeLists.txt  state_timeout_test.cpp
test/state_timeout/config/: state_config.json
test/state_timeout/config/trans_config/: completed_to_working.json  init_to_working.json  longwait_timeout.json  wait_timeout.json  working_to_longwait.json  working_to_waiting.json
